@@ -32,3 +32,6 @@ PodWeaver.config_plugin = @FLORA
 [Prereqs / TestRecommends]
 MooseX::ConfigFromFile = 0
 MooseX::SimpleConfig = 0.07
+
+[Prereqs / DevelopRequires]
+Test::Warnings = 0
