@@ -1,9 +1,9 @@
 use strict;
 use warnings FATAL => 'all';
 
-use Test::More tests => 10;
+use Test::More;
 use Test::Fatal 0.003;
-use Test::Warnings;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 
 BEGIN {
     use_ok('MooseX::Getopt');
@@ -98,3 +98,5 @@ BEGIN {
 
     like exception { App->new_with_options }, qr/Unknown option: private_stuff/;
 }
+
+done_testing;
