@@ -1,10 +1,9 @@
 use strict;
 use warnings FATAL => 'all';
 
-use Test::More tests => 8;
+use Test::More;
 use Test::Fatal;
-use Test::Warnings;
-
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 
 BEGIN {
     use_ok('MooseX::Getopt');
@@ -39,3 +38,5 @@ BEGIN {
     local @ARGV = (qw/--another-thingy bar/);
     like exception { App->new_with_options }, qr/Unknown option: another-thingy/;
 }
+
+done_testing;
