@@ -1,8 +1,8 @@
 use strict;
 use warnings FATAL => 'all';
 
-use Test::More tests => 22;
-use Test::Warnings;
+use Test::More;
+use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 use Moose ();
 use Moose::Meta::Class;
 use Module::Runtime 'use_module';
@@ -56,3 +56,4 @@ foreach my $role (qw/
     }
 }
 
+done_testing;
